# gatesrvd

./: .cproject  .cproject.mine  .cproject.r11  .project  AUTHORS  Makefile.in  ProjectHome.md  config.h  config.h.in  configure  configure.ac  libtool
autom4te.cache/: output.1  requests  traces.1
conf/: Makefile  Makefile.am  Makefile.in  gatesrvd.conf
src/: Makefile.am  Makefile.in  adrport.c  adrport.h  gatectl.h  gatesrvd  gatesrvd.c  initdata.h  loger.c  loger.h  types.h
src/.deps/: gatesrvd.Po  loger.Po
src/debug/: Makefile  debug.c
src/debug/.deps/: debug.Plo
src/modules/: Makefile  Makefile.in  nem_common.h  nem_dbus.c  nem_dbus.h  nem_execute.c  nem_execute.h  nfc-dbus-object.h
src/modules/.deps/: nem_execute_la-nem_execute.Plo
src/nfcconf/: Makefile  Makefile.in
src/nfcconf/.deps/: nfcconf.Plo
trunk/: .autotools  .cproject  .project  Makefile  config.status  configure
trunk/autom4te.cache/: output.1.mine  output.1.r7  requests  traces.0
trunk/conf/: gatesrvd.conf
trunk/src/: Makefile  Makefile.am  Makefile.in  adrport.c  gatectl.c  gatesrvd  gatesrvd.c  initdata.h  types.h
trunk/src/.deps/: adrport.Po  gatectl.Po  gatesrvd.Po
trunk/src/debug/: Makefile.in
trunk/src/modules/: nem_dbus.c  nem_dbus.h  nem_execute.h
trunk/src/nfcconf/.deps/: nfclex.Plo  parse.Plo  write.Plo
